--- a/Saver/pom.xml
+++ b/Saver/pom.xml
@@ -27,5 +27,10 @@
       <artifactId>mysql-connector-java</artifactId>
       <version>5.1.18</version>
     </dependency>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>4.3.1.Final</version>
+    </dependency>
   </dependencies>
 </project>
