--- a/Model/pom.xml
+++ b/Model/pom.xml
@@ -22,6 +22,11 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>com.artech.prototype2</groupId>
+          <artifactId>Utils</artifactId>
+          <version>2.0</version>
+      </dependency>
   </dependencies>
   <modules>
     <module>Memory</module>
