Добавлен новый модуль - SearchEngine. Индексирование сайтов (цель: получить параллельные тексты)

--- a/Model/pom.xml
+++ b/Model/pom.xml
@@ -28,5 +28,6 @@
     <module>Statistics</module>
     <module>SolutionCenter</module>
     <module>Analisys</module>
+    <module>SearchEngine</module>
   </modules>
 </project>
