--- a/Model/SearchEngine/pom.xml
+++ b/Model/SearchEngine/pom.xml
@@ -22,5 +22,10 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>Saver</artifactId>
+      <version>${project.version}</version>
+    </dependency>
   </dependencies>
 </project>
