--- a/Model/Memory/pom.xml
+++ b/Model/Memory/pom.xml
@@ -26,6 +26,12 @@
             <version>1.5</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.10.1</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     <name>Memory</name>
 </project>
