Промежуточная версия Saver c Менеджером API

--- a/Saver/src/main/resources/dbconnect/dbconnect.properties
+++ b/Saver/src/main/resources/dbconnect/dbconnect.properties
@@ -2,6 +2,9 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
-user=root
-password=root
-port=3306
+#mysql
+mysql.jdbc.login = root
+mysql.jdbc.pass = root
+mysql.jdbc.scripts = mysql
+mysql.jdbc.url = jdbc:mysql://localhost:3306/
+mysql.jdbc.driverName = com.mysql.jdbc.Driver
