--- a/Saver/pom.xml
+++ b/Saver/pom.xml
@@ -32,5 +32,16 @@
       <artifactId>hibernate-core</artifactId>
       <version>4.3.1.Final</version>
     </dependency>
+    <dependency>
+      <groupId>org.hibernate.common</groupId>
+      <artifactId>hibernate-commons-annotations</artifactId>
+      <version>4.0.4.Final</version>
+      <type>jar</type>
+    </dependency>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>Utils</artifactId>
+      <version>${project.version}</version>
+    </dependency>
   </dependencies>
 </project>
