Переименование скриптов проливки, правильная реализация проливки скриптов в БД

--- a/Saver/src/main/resources/dbconnect/dbconnect.properties
+++ b/Saver/src/main/resources/dbconnect/dbconnect.properties
@@ -8,3 +8,6 @@ mysql.jdbc.pass = root
 mysql.jdbc.scripts = mysql
 mysql.jdbc.url = jdbc:mysql://localhost:3306/
 mysql.jdbc.driverName = com.mysql.jdbc.Driver
+
+#common
+common.prop.jdbc = prop/quequeScripts.prop
