--- a/Saver/src/main/resources/dbconnect/dbconnect.properties
+++ b/Saver/src/main/resources/dbconnect/dbconnect.properties
@@ -11,3 +11,6 @@ mysql.jdbc.driverName = com.mysql.jdbc.Driver
 
 #common
 common.prop.jdbc = prop/quequeScripts.prop
+
+#hibernate
+hibernate.db = prototype
