Корректное сичитывание и сохранение в бд из файла (проблема кодировки)

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@
 /Model/Analisys/target/
 .idea
 /target/
+/Model/target/javadoc-bundle-options/javadoc-options-javadoc-resources.xml
+javadoc-bundle-options
