--- a/Model/Statistics/pom.xml
+++ b/Model/Statistics/pom.xml
@@ -27,5 +27,10 @@
       <artifactId>Saver</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>Utils</artifactId>
+      <version>${project.version}</version>
+    </dependency>
   </dependencies>
 </project>
