--- a/Saver/pom.xml
+++ b/Saver/pom.xml
@@ -60,5 +60,10 @@
       <artifactId>jta</artifactId>
       <version>1.1</version>
     </dependency>
+    <dependency>
+      <groupId>unknown.binary</groupId>
+      <artifactId>mysql-connector-java-5.1.23-bin</artifactId>
+      <version>SNAPSHOT</version>
+    </dependency>
   </dependencies>
 </project>
